AR: cambiamenti UC

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -223,12 +223,11 @@ Come specificato nelle norme di progetto (NormeDiProgetto.pdf) di WebShape, la t
 \sezione{Casi d'uso}
 Al seguito di questo paragrafo vengono illustrati i casi d'uso, sia grafici che narrativi, utilizzati nell'analisi dei requisiti effettuata da WebShape. Lo scopo dei casi d'uso \`e quello di consentire una comprensione rapida ed efficace dei bisogni del cliente percepiti dall'azienda. Per una lista completa dei requisiti individuati si rimanda comunque alla lista dei requisiti di sezione \ref{listarequisiti}, cui faranno riferimento anche gli stessi casi d'uso narrativi.
 
-\subsezione{Avvio}
-Il seguente grafico descrive come ci si attende l'utente avvii l'applicazione.
+\subsezione{Use Case Generale}
 \begin{figure}[!ht]
 \centering
-\includegraphics{UCAvvio.png}
-\caption{Avvio dell'applicazione}
+\includegraphics{AJAXDRAW.jpg}
+\caption{gestire figure}
 \end{figure}
 
 Segue ora una descrizione testuale del caso d'uso presentato dal grafico.
@@ -394,7 +393,7 @@ Il seguente grafico illustra le interazioni tra l'utente e il sistema per disegn
 \begin{figure}[!ht]
 \centering
 \vspace{20pt} 
-\includegraphics[width=17cm]{UC9Espanso.png}
+\includegraphics[width=17cm]{UC9Espanso.jpg}
 \caption{UC9 Caso d'uso: disegna}
 \label{uc9}
 \end{figure}
