modifiche generali di integrazione

--- a/doc/PianoDiProgetto/PianoDiProgetto.tex
+++ b/doc/PianoDiProgetto/PianoDiProgetto.tex
@@ -311,11 +311,11 @@ In questa sottosezione verr\` a illustrato il preventivo totale, comprendente i 
 \newpage
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
-\includegraphics[width=300pt]{OreTotali}
+\includegraphics[width=300pt]{Ore_Totali}
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
-\includegraphics[width=350pt]{CostiTotali}
+\includegraphics[width=350pt]{Costi_Totali}
 
 \subsezione{Pianificazione economico-temporale RR-RPP}
 All'interno di questa fase si concluder\`a la fase di analisi e inizier\`a quella di progettazione, con la definizione di un progetto di massima che si svilupper\`a e concretizzer\`a nelle due iterazioni previste all'interno della fase RPP-RQ, descritta in seguito. \\
@@ -345,11 +345,11 @@ Preventivo relativo alla fase Revisione dei requisiti-Revisione del progetto pre
 \newpage
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
-\includegraphics[width=300pt]{RR-RPP_Ore}
+\includegraphics[width=300pt]{RR_RPP_Ore}
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
-\includegraphics[width=350pt]{RR-RPP_Costi}
+\includegraphics[width=350pt]{RR_RPP_Costi}
 \newpage
 
 \subsezione{Pianificazione economico-temporale RPP-RQ}
@@ -381,11 +381,11 @@ Preventivo relativo alla fase Revisione del progetto preliminare-Revisione di qu
 \newpage
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
-\includegraphics[width=300pt]{RPP-RQ_Ore}
+\includegraphics[width=300pt]{RPP_RQ_Ore}
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
-\includegraphics[width=350pt]{RPP-RQ_Costi}
+\includegraphics[width=350pt]{RPP_RQ_Costi}
 
 \newpage
 
@@ -416,11 +416,11 @@ Preventivo relativo alla fase Revisione di qualifica-Revisione di accettazione.
 
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
-\includegraphics[width=300pt]{RQ-RA_Ore}
+\includegraphics[width=300pt]{RQ_RA_Ore}
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
-\includegraphics[width=350pt]{RQ-RA_Costi}
+\includegraphics[width=350pt]{RQ_RA_Costi}
 
 \subsezione{Distribuzione dei ruoli}
 La distribuzione dei ruoli all'interno dell'azienda \`e stata realizzata in modo da permettere a tutti i membri di WebShape di ricoprire tutti i ruoli richiesti dal progetto, distribuendoli nel modo pi\`u equo possibile, rispettando i vincoli previsti dalle Assunzioni Iniziali. La distribuzione dei ruoli \`e meglio descritta nelle tabelle (\ref{tab:TabellaRotazRuoliUno}) e (\ref{tab:TabellaRotazRuoliDue}) a pagina ~\pageref{tab:TabellaRotazRuoliUno} ; \`e anche descritto il carico di lavoro/persona in ore nella tabella (\ref{tab:TabellaPrevPersOre}) a pagina ~\pageref{tab:TabellaPrevPersOre}.\\
@@ -589,11 +589,11 @@ Per conoscenza del cliente, \`e fornita anche una stima approssimativa dell'impi
 
 \begin{center}\textbf{Ore/Ruolo}
 \end{center}
-\includegraphics[width=300pt]{Cons_RR-RPP2}
+\includegraphics[width=300pt]{Cons-RR-RPP2}
 
 \begin{center}\textbf{Costo/Ruolo}
 \end{center}
-\includegraphics[width=350pt]{Cons_RR-RPP1}
+\includegraphics[width=350pt]{Cons-RR-RPP1}
 
 
 \begin{table}[!h]
