--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -561,7 +561,7 @@ Il seguente grafico illustra le interazioni tra l'utente e il sistema per selezi
 \begin{figure}[!ht]
 \centering
 \vspace{20pt} 
-\includegraphics{UC10Espanso.jpg}
+\includegraphics[scale=0.4]{UC10Espanso.png}
 \caption{UC10 Caso d'uso: seleziona e modifica}
 \label{uc10}
 \end{figure}
