AR: modificate alcune precondizioni

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -252,8 +252,9 @@ L'utente pu\`o cancellare totalmente quanto fino a quel momento \`e stato disegn
 \item L'utente seleziona il comando per pulire il canvas. 
 \item Il canvas viene completamente cancellato.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il canvas \`e visibile all'utente.
-\paragraph{Postcondizioni} Il canvas \`e visibile all'utente ed \`e vuoto.
+\paragraph{Precondizioni}  Il sistema AJAXDRAW \`e in attesa di istruzioni da parte dell' utente.
+\paragraph{Postcondizioni} Il sistema AJAXDRAW visualizza l'area di disegno vuota.
+.
 
 \subsubsezione{UC2 Caso d'uso: visualizza manuale}
 \paragraph{Attori coinvolti} Utente.
@@ -264,7 +265,7 @@ L'utente pu\`o visualizzare il manuale dell'applicazione in linea.
 \item L'utente seleziona il comando per visualizzare il manuale. 
 \item Il manuale viene visualizzato mediante l'apertura di una nuova pagina {\underline{HTML}}.
 \end{elenconumerato}
-\paragraph{Precondizioni} Il manuale utente non \`e visualizzato.
+\paragraph{Precondizioni} Il sistema AJAXDRAW \`e in attesa di istruzioni da parte dell' utente. \`E possibile connettersi al server.
 \paragraph{Postcondizioni} Il manuale utente \`e visualizzato.
 
 \subsubsezione{UC3 Caso d'uso: richiedi manuale}
